<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/five_dp"
    android:layout_margin="@dimen/twenty_dp"
    android:backgroundTint="#F3F3F3"
    app:cardCornerRadius="@dimen/ten_dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_title"
            android:textStyle="bold"
            android:textSize="@dimen/twenty_sp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/thirty_dp"
            android:layout_marginBottom="@dimen/thirty_dp"
            android:weightSum="4"
            tools:ignore="DisableBaselineAlignment">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    android:src="@drawable/responsible"
                    android:scaleType="center"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    android:src="@drawable/pickup"
                    android:scaleType="center"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we_Collect"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    android:src="@drawable/laund"
                    android:scaleType="center"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we_Service"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    android:src="@drawable/delivery"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we_delivery"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>