<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/hundred_dp"
        android:layout_height="@dimen/sixty_dp"
        android:scaleType="centerInside"
        android:src="@drawable/sparkles_title"
        android:layout_marginStart="@dimen/ten_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/forty_eight_dp"
        android:layout_height="@dimen/forty_eight_dp"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        android:backgroundTint="#ffff"
        android:elevation="@dimen/five_dp"
        app:cardCornerRadius="@dimen/ten_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/notification"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageView"
        android:layout_margin="@dimen/ten_dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/viewPager2">

        <include layout="@layout/cardview_belowslider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/ten_dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/ten_dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service"
                android:textColor="@color/black"
                android:textSize="@dimen/eighteen_sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subText"
                android:textSize="@dimen/fourteen_sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten_dp"
            android:backgroundTint="#0571BA"
            android:text="@string/rate_list"
            app:cornerRadius="@dimen/ten_dp"
            app:icon="@drawable/list"
            app:iconGravity="textStart" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/eight_dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>